# video-to-deck

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  run.sh  setup.sh  video_to_deck.py  youtube_to_markdown.py
.claude/: settings.json
.claude/hooks/: check-py-syntax.py
.claude/skills/bump-and-ship/: SKILL.md
tests/: README.md  compare_slides.py
tests/fixtures/: igO8iyca2_g.pptx
