[project]
name = "video-to-deck"
version = "0.1.0"
description = "Turn a screen-recording MP4 + SRT transcript into a PowerPoint deck."
requires-python = ">=3.10"
dependencies = [
    "imagehash>=4.3.1",
    "pillow>=10.0.0",
    "python-pptx>=0.6.23",
]

[project.scripts]
video-to-deck = "video_to_deck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["video_to_deck.py"]
