[project]
name = "youtube-to-markdown"
version = "0.1.0"
description = "Turn a YouTube video (or local MP4 + SRT) into a readable Markdown digest with embedded frame images."
requires-python = ">=3.10"
dependencies = [
    "imagehash>=4.3.1",
    "pillow>=10.0.0",
    "python-pptx>=0.6.23",
    "anthropic>=0.45.0",
    "pydantic>=2.0",
    "yt-dlp>=2024.0.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0",
    "markdown>=3.5",
    "faster-whisper>=1.0.0",
    "onnxruntime<1.20; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "mcp>=1.2",
]

[project.scripts]
yt2md = "youtube_to_markdown:main"
youtube-to-markdown = "youtube_to_markdown:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["youtube_to_markdown.py"]
